crates/aether-actor-derive/tests/ui/rejects_missing_namespace_ffi.stderr
error: #[actor] impl WasmActor for X must declare `const NAMESPACE: &'static str = ...` so the marker `impl Addressable` can carry it
  --> tests/ui/rejects_missing_namespace_ffi.rs:26:34
   |
26 | impl aether_actor::WasmActor for NoNamespace {
   |                                  ^^^^^^^^^^^
